# githubctl

./: .env.example  pyproject.toml
githubctl/: github.py  main.py  utils.py
githubctl/cli/: repo.py  user.py
tests/: README.md  input.md  input.txt  test.py
